count-päring raw sql kujul

--- a/templates/booksearch/Search.html
+++ b/templates/booksearch/Search.html
@@ -62,7 +62,7 @@
 
     for (var i = 0; i < table.rows.length; i++) {
         table.rows[i].onclick = function() {
-            parem.innerHTML = "Selle raamatu nimi on" + this.cells[0].innerHTML;
+            parem.innerHTML = "Selle raamatu pealkiri on \"" + this.cells[0].innerHTML + "\".";
         }
     }
 </script>	
