Kasutajanime kuvamise asemel link kasutaja nimekirjadele, MyLists.css kujunduse parandused

--- a/templates/booksearch/About.html
+++ b/templates/booksearch/About.html
@@ -32,8 +32,12 @@
 {% if user.is_authenticated %}
 <ul id="loggedInNavbar">
     <li style="float:left"><a href="https://vl2018-ryhm15.herokuapp.com/">BOOKWORM</a></li>
-    <li><a href="https://vl2018-ryhm15.herokuapp.com/about">About</a></li>
-    <li>Kasutaja: {{ user.get_username }}</li>
+    <li><a href="https://vl2018-ryhm15.herokuapp.com/about">Meist</a></li>
+    <li>
+        <form action="{% url 'mylists' %}" method="post"> {% csrf_token %}
+            <a href="javascript:;" onclick="parentNode.submit();">Minu nimekirjad</a>
+        </form>
+    </li>
     <li><a href="{% url 'signout' %}">Logi välja</a></li>
     <li>Seaded</li>
 </ul>
