--- a/templates/booksearch/MyLists.html
+++ b/templates/booksearch/MyLists.html
@@ -10,13 +10,30 @@
     <script src="{% static 'booksearch/scripts.js' %}"></script>
 </head>
 <body>
-<!--Navigation bar-->
-<ul>
+
+<!--Navigation bars-->
+<!-- Teine navbar, mis kuvatakse sisselogitud kasutajale -->
+{% if user.is_authenticated %}
+<ul id="loggedInNavbar">
     <li style="float:left"><a href="https://vl2018-ryhm15.herokuapp.com/">BOOKWORM</a></li>
-    <li><a href="https://vl2018-ryhm15.herokuapp.com/about">About</a></li>
-    <li onclick="document.getElementById('login').style.display='none'; document.getElementById('signup').style.display='block'">Sign up</li>
-    <li onclick="document.getElementById('signup').style.display='none'; document.getElementById('login').style.display='block'">Log in</li>
+    <li><a href="https://vl2018-ryhm15.herokuapp.com/about">Meist</a></li>
+    <li>
+        <form action="{% url 'mylists' %}" method="post"> {% csrf_token %}
+            <a href="javascript:;" onclick="parentNode.submit();">Minu nimekirjad</a>
+        </form>
+    </li>
+    <li><a href="{% url 'signout' %}">Logi välja</a></li>
+    <li>Seaded</li>
 </ul>
+{% else %}
+<ul id="loggedOutNavbar">
+    <li style="float:left"><a href="https://vl2018-ryhm15.herokuapp.com/">BOOKWORM</a></li>
+    <li><a href="https://vl2018-ryhm15.herokuapp.com/about">Meist</a></li>
+    <li onclick="document.getElementById('login').style.display='none'; document.getElementById('signup').style.display='block'">Loo kasutaja</li>
+    <li onclick="document.getElementById('signup').style.display='none'; document.getElementById('login').style.display='block'">Logi sisse</li>
+</ul>
+{% endif %}
+
 <!--Own/Want bar-->
 <div class="upper">
     <ul>
@@ -120,7 +137,7 @@
 </div>
 
 <div class="footer">
-    Siia tuleb Advanced Search...
+    <span id="footerspan">Siia tuleb Advanced Search...</span>
 </div>
 
 </body>
