Lisatud omamise nupp, sisse-väljalogimisel ei lahku brauser otsingulehelt

--- a/static/booksearch/Search.css
+++ b/static/booksearch/Search.css
@@ -49,6 +49,11 @@ li:hover:not(.active) {
 }
 
 
+
+#ownedForm {
+    display: none;
+}
+
 /* Split the screen in half */
 .split {
     width: 48%;
