--- a/templates/booksearch/Search.html
+++ b/templates/booksearch/Search.html
@@ -59,9 +59,13 @@
         <p>Või äkki jätame selle osa üldse ära? Ehk lihtsalt üks leht (mitte kaheks jagatud)?</p>
     </div>
     {% if user.is_authenticated %}
-    <form id="ownedForm" method="post"> {% csrf_token %}
-        <table id="ownedTable">{{ addOwned }}</table>
-        <button type="submit" id="ownedButton">Mul on see raamat!</button>
+    <form class="invisForm" id="ownedForm" method="post" onsubmit="fillOwned()"> {% csrf_token %}
+        <table id="ownedTable">{{ ownedform }}</table>
+        <button type="submit" id="ownedButton" onclick="fillOwned()">Mul on see raamat!</button>
+    </form>
+    <form class="invisForm" id="wantedForm" method="post">{% csrf_token %}
+        <table id="wantedTable">{{ wantedform }}</table>
+        <button type="submit" id="wantedButton" onclick="fillWanted()">Ma tahan seda raamatut!</button>
     </form>
     {% endif %}
 </div>
@@ -69,15 +73,27 @@
 <script type="text/javascript">
     var table = document.getElementById('table');
     var parem = document.getElementById('parem');
+    var valik;
 
     for (var i = 0; i < table.rows.length; i++) {
         table.rows[i].onclick = function() {
-            var valik = this.cells[0].innerHTML;
+            valik = this.cells[0].innerHTML;
             parem.innerHTML = "Selle raamatu pealkiri on \"" + valik + "\".";
             document.getElementById('ownedForm').style.display='block';
-            document.getElementById('addOwnedField').value=valik;
+            document.getElementById('wantedForm').style.display='block';
         }
     }
+
+    function fillOwned() {
+        document.getElementById('ownedField').value=valik;
+        document.getElementById('wantedField').value= "";
+    }
+
+    function fillWanted() {
+        document.getElementById('wantedField').value=valik;
+        document.getElementById('ownedField').value="";
+    }
+
 </script>	
 
 <!-- Login modal -->
