--- a/templates/booksearch/Search.html
+++ b/templates/booksearch/Search.html
@@ -59,7 +59,7 @@
         <p>Või äkki jätame selle osa üldse ära? Ehk lihtsalt üks leht (mitte kaheks jagatud)?</p>
     </div>
     {% if user.is_authenticated %}
-    <form class="invisForm" id="ownedForm" method="post" onsubmit="fillOwned()"> {% csrf_token %}
+    <form class="invisForm" id="ownedForm" method="post"> {% csrf_token %}
         <table id="ownedTable">{{ ownedform }}</table>
         <button type="submit" id="ownedButton" onclick="fillOwned()">Mul on see raamat!</button>
     </form>
@@ -83,17 +83,6 @@
             document.getElementById('wantedForm').style.display='block';
         }
     }
-
-    function fillOwned() {
-        document.getElementById('ownedField').value=valik;
-        document.getElementById('wantedField').value= "";
-    }
-
-    function fillWanted() {
-        document.getElementById('wantedField').value=valik;
-        document.getElementById('ownedField').value="";
-    }
-
 </script>	
 
 <!-- Login modal -->
