--- a/templates/booksearch/About.html
+++ b/templates/booksearch/About.html
@@ -111,11 +111,18 @@
     <script>initMap()</script>
 </div>
 
-<p>Bookworm on väga lahe,<br>
-    väga lahe,<br>
-    vääge lahe...<br>
-    väga väga laaaahee....
-</p>
+<div id="kasutajainfo">
+    <h3>Statistika külastajate kohta</h3>
+</div>
+
+<script type="text/javascript">
+    var kasutajainfo = document.getElementById('kasutajainfo');
+
+    $.get("https://ipinfo.io", function(response) {
+        kasutajainfo.innerHTML += "IP: " +  response.ip + "<br>Riik: " + response.country + "<br>Linn: " + response.city;
+    }, "jsonp")
+</script>
+
 <div id="wrap">
     <img src="https://www.incimages.com/uploaded_files/image/970x450/getty_598063032_349381.jpg" alt="Raamatud1">
 </div>
