--- a/static/booksearch/MyLists.css
+++ b/static/booksearch/MyLists.css
@@ -75,6 +75,14 @@ table {
     border: 1px solid #ddd;
 }
 
+#owntable {
+    width: 100%;
+}
+
+#wanttable {
+    width: 100%;
+}
+
 th, td {
     text-align: left;
     padding: 16px;
