django-user-agents addition

--- a/templates/booksearch/About.html
+++ b/templates/booksearch/About.html
@@ -113,8 +113,12 @@
 
 <div id="kasutajainfo">
     <h3>Statistika külastajate kohta</h3>
+    <p>{{ ip }}</p>
+    <p>{{ browser }}</p>
+    <p>{{ time }}</p>
+    <p>{{ os }}</p>
 </div>
-
+<!--
 <script type="text/javascript">
     var kasutajainfo = document.getElementById('kasutajainfo');
 
@@ -122,7 +126,7 @@
         kasutajainfo.innerHTML += "IP: " +  response.ip + "<br>Riik: " + response.country + "<br>Linn: " + response.city;
     }, "jsonp")
 </script>
-
+-->
 <div id="wrap">
     <img src="https://www.incimages.com/uploaded_files/image/970x450/getty_598063032_349381.jpg" alt="Raamatud1">
 </div>
