külastuste kellaaegade graafik

--- a/templates/booksearch/About.html
+++ b/templates/booksearch/About.html
@@ -139,7 +139,11 @@
         {% endfor %}
     </table>
     <br>
+    <h4>Lehtede külastamise kellaajad</h4>
+    <img src="{% static 'booksearch/hittimes.png' %}">
 </div>
+
+
 <!--
 <script type="text/javascript">
     var kasutajainfo = document.getElementById('kasutajainfo');
