--- a/templates/booksearch/About.html
+++ b/templates/booksearch/About.html
@@ -139,7 +139,7 @@
         {% endfor %}
     </table>
     <br>
-    <h4>Lehtede külastamise kellaajad</h4>
+    <h4>Lehtede külastamise kellaajad (UTC)</h4>
     <img src="{% static 'booksearch/hittimes.png' %}">
 </div>
 
