Kõikidele enda CSS v2

--- a/static/booksearch/About.css
+++ b/static/booksearch/About.css
@@ -14,6 +14,10 @@ ul {
     border-radius: 5px;
 }
 
+ul.errorlist {
+    display: none;
+}
+
 li {
     float: right;
     border-right:1px solid #bbb;
