--- a/templates/booksearch/About.html
+++ b/templates/booksearch/About.html
@@ -113,9 +113,10 @@
 
 <div id="kasutajainfo">
     <h3>Statistika külastajate kohta</h3>
-    <p>{{ ip }}</p>
-    <p>{{ browser }}, {{ os }}</p>
-    <p>{{ time }}</p>
+    <h4>Selle sessiooni andmed</h4>
+    <p>ip: {{ ip }}</p>
+    <p>brauser: {{ browser }}, os: {{ os }}</p>
+    <p>Lehe avamise kellaaeg: {{ time }}</p>
     <br>
     <h4>Kasutatud brauserid</h4>
     <table id="browsertable">
