Lisasin alt pildile Search lehel

--- a/templates/booksearch/About.html
+++ b/templates/booksearch/About.html
@@ -138,7 +138,7 @@
     </table>
     <br>
     <h4>Lehtede külastamise kellaajad (UTC)</h4>
-    <img src="{% static 'booksearch/hittimes.png' %}">
+    <img src="{% static 'booksearch/hittimes.png' %}" alt="Külastamiste kellajad">
 </div>
 
 
