--- a/templates/booksearch/Frontpage.html
+++ b/templates/booksearch/Frontpage.html
@@ -6,9 +6,9 @@
 	<meta name="description" content="Raamatu otsingumootor Bookworm, arendatud Tartu Ülikooli aine Veebirakenduste loomise raames Rühm15 poolt">
 	<meta name="keyowrds" content="raamatu otsing,otsi raamatuid,raamat,otsi,bookworm,raamatu otsingumootor">
     <title>Bookworm</title>
-    <link rel="stylesheet" href="{% static 'fontawesome-free-5.5.0-web/css/fontawesome.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'booksearch/Frontpage.css' %}">
-    <!--<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write("<script src=\"{% static 'jquery-3.3.1.js' %}\"><\/script>")</script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <script>
         (function($){
@@ -19,7 +19,7 @@
             }
             $span.remove();
         })(jQuery);
-    </script>-->
+    </script>
     <script src="{% static 'booksearch/scripts.js' %}"></script>
 </head>
 <body>
