--- a/templates/booksearch/Search.html
+++ b/templates/booksearch/Search.html
@@ -7,7 +7,19 @@
 	<meta name="keywords" content="raamat,otsing,bookworm,otsi raamatuid">
     <title>Search</title>
     <link rel="stylesheet" type="text/css" href="{% static 'booksearch/Search.css' %}">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write("<script src=\"{% static 'jquery-3.3.1.js' %}\"><\/script>")</script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <script>
+        (function($){
+            var $span = $('<span class="fa" style="display:none"></span>').appendTo('body');
+            if ($span.css('fontFamily') !== 'FontAwesome' ) {
+                // Fallback Link
+                $('head').append("<link href=\"{% static 'fontawesome-free-5.5.0-web/css/fontawesome.min.css' %}\" rel=\"stylesheet\">");
+            }
+            $span.remove();
+        })(jQuery);
+    </script>
     <script src="{% static 'booksearch/scripts.js' %}"></script>
 </head>
 <body>
