--- a/templates/booksearch/About.html
+++ b/templates/booksearch/About.html
@@ -9,20 +9,6 @@
     <link rel="stylesheet" type="text/css" href="{% static 'booksearch/About.css' %}">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write("<script src=\"{% static 'jquery-3.3.1.js' %}\"><\/script>")</script>
-    <script>
-        function yHandler() {
-            var wrap = document.getElementById('wrap');
-            var contentHeight = wrap.offsetHeight; // Gets page content height
-            var yOffset = window.pageYOffset; // Gets the vertical scroll position
-            var y = yOffset + window.innerHeight;
-            if (y >= contentHeight) {
-                wrap.innerHTML = '<img src="https://www.incimages.com/uploaded_files/image/970x450/getty_598063032_349381.jpg" alt="Raamatud1">' +'<br>'
-                    + '<img src="https://cdn-images-1.medium.com/max/1024/1*YLlZ96J3p8GFkIh1USVMzg.jpeg" alt="Raamatud2">';
-                // Ajax call to get more dynamic data
-            }
-        }
-        window.onscroll = yHandler;
-    </script>
     <script src="{% static 'booksearch/scripts.js' %}"></script>
 </head>
 <body>
@@ -146,17 +132,11 @@
     <h3>CDN testi jaoks</h3>
 </div>
 
-<script type="text/javascript">
-    var uus = document.getElementById('uus');
-
-    $.get("https://ipinfo.io", function(response) {
-        uus.innerHTML += "Sinu IP: " +  response.ip + "<br>Sinu Riik: " + response.country;
-    }, "jsonp")
-</script>
-
-
 <div id="wrap">
     <img src="https://www.incimages.com/uploaded_files/image/970x450/getty_598063032_349381.jpg" alt="Raamatud1">
 </div>
+
+<script src="{% static 'booksearch/About.js' %}"></script>
+
 </body>
 </html>
