--- a/templates/booksearch/About.html
+++ b/templates/booksearch/About.html
@@ -10,6 +10,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write("<script src=\"{% static 'jquery-3.3.1.js' %}\"><\/script>")</script>
     <script src="{% static 'booksearch/scripts.js' %}"></script>
+    <script src="{% static 'booksearch/About.js' %}"></script>
 </head>
 <body>
 
@@ -137,6 +138,6 @@
 </div>
 
 <script src="{% static 'booksearch/About.js' %}"></script>
-
+	
 </body>
 </html>
