--- a/templates/booksearch/About.html
+++ b/templates/booksearch/About.html
@@ -132,6 +132,7 @@
 <div id="uus">
     <h3>CDN testi jaoks</h3>
 </div>
+<script src="{% static 'booksearch/ipinfo.js' %}"></script>
 
 <div id="wrap">
     <img src="https://www.incimages.com/uploaded_files/image/970x450/getty_598063032_349381.jpg" alt="Raamatud1">
