--- a/templates/booksearch/MyLists.html
+++ b/templates/booksearch/MyLists.html
@@ -69,32 +69,11 @@
     </form>
 </div>
 
-<script type="text/javascript">
-    var owntable = document.getElementById('owntable');
-    var wanttable = document.getElementById('wanttable');
-    var parem = document.getElementById('parem');
-    var valik;
-
-    for (var i = 0; i < owntable.rows.length; i++) {
-        owntable.rows[i].onclick = function() {
-            valik = this.cells[0].innerHTML;
-            parem.innerHTML = "Selle raamatu pealkiri on \"" + valik + "\".";
-            document.getElementById('rmWantedForm').style.display='none';
-        }
-    }
-
-    for (var i = 0; i < wanttable.rows.length; i++) {
-        wanttable.rows[i].onclick = function() {
-            valik = this.cells[0].innerHTML;
-            parem.innerHTML = "Selle raamatu pealkiri on \"" + valik + "\".";
-            document.getElementById('rmWantedForm').style.display='block';
-        }
-    }
-</script>
-
 <div class="footer">
     <span id="footerspan">Siia tuleb Advanced Search...</span>
 </div>
+
+<script src="{% static 'booksearch/MyLists.js' %}"></script>
 
 </body>
 </html>
