--- a/static/booksearch/Frontpage.css
+++ b/static/booksearch/Frontpage.css
@@ -137,7 +137,7 @@ button:hover {
     opacity: 0.8;
 }
 
-.tühista {
+.tuhista {
     width: auto;
     padding: 10px 18px;
     background-color: #00B4CC;
