--- a/static/booksearch/Search.css
+++ b/static/booksearch/Search.css
@@ -139,7 +139,7 @@ button:hover {
     opacity: 0.8;
 }
 
-.tühista {
+.tuhista {
     width: auto;
     padding: 10px 18px;
     background-color: #00B4CC;
