--- a/templates/booksearch/Frontpage.html
+++ b/templates/booksearch/Frontpage.html
@@ -83,7 +83,7 @@
         </div>
         <div class="container">
             <button type="button" onclick="document.getElementById('login').style.display='none'"
-                    class="tühista">Tühista</button>
+                    class="tuhista">Tühista</button>
             <span class="parool"><a href="#">Unustasid parooli?</a> </span>
         </div>
         <br>
@@ -107,7 +107,7 @@
 
         <div class="container">
             <button type="button" onclick="document.getElementById('signup').style.display='none'"
-                    class="tühista">Tühista</button>
+                    class="tuhista">Tühista</button>
         </div>
     </form>
 </div>
