--- a/templates/booksearch/Search.html
+++ b/templates/booksearch/Search.html
@@ -104,7 +104,7 @@
         </div>
         <div class="container">
             <button type="button" onclick="document.getElementById('login').style.display='none'"
-                    class="tühista">Tühista</button>
+                    class="tuhista">Tühista</button>
             <span class="parool"><a href="#">Unustasid parooli?</a> </span>
         </div>
         <br>
@@ -128,7 +128,7 @@
 
         <div class="container">
             <button type="button" onclick="document.getElementById('signup').style.display='none'"
-                    class="tühista">Tühista</button>
+                    class="tuhista">Tühista</button>
         </div>
     </form>
 </div>
