--- a/templates/booksearch/About.html
+++ b/templates/booksearch/About.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'booksearch/About.css' %}">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write("<script src=\"{% static 'jquery-3.3.1.js' %}\"><\/script>")</script>
+    <!-- jQuery fallback -->
     <script src="{% static 'booksearch/scripts.js' %}"></script>
     <script src="{% static 'booksearch/About.js' %}"></script>
 </head>
@@ -102,6 +103,7 @@
     <h3>Statistika külastajate kohta</h3>
     <h4>Selle sessiooni andmed</h4>
     <div id="uus"></div>
+    <!-- // IP ja riik Ajaxi abil -->
     <script src="{% static 'booksearch/ipinfo.js' %}"></script>
     <p>Brauser: {{ browser }}, os: {{ os }}</p>
     <p>Lehe avamise kellaaeg: {{ time }} (UTC)</p>
