kasutajalistides tahetu eemaldamisel errorlist peidetud

--- a/static/booksearch/MyLists.css
+++ b/static/booksearch/MyLists.css
@@ -44,6 +44,9 @@ li:hover:not(.active) {
     background-color: #4CAF50;
 }
 
+ul.errorlist {
+    display: none;
+}
 
 /* Split the screen in half */
 .split {
