--- a/static/booksearch/MyLists.css
+++ b/static/booksearch/MyLists.css
@@ -67,7 +67,7 @@ ul.errorlist {
 /* Control the right side */
 .right {
     top: 60px;
-    height: 10em;
+    height: 90%;
     right: 1%;
 }
 
@@ -176,4 +176,23 @@ tr:nth-child(even) {
 
 #rmWantedTable {
     display: none;
+}
+
+/* Raamatu info kuvamise jaotus paremal */
+.vasak {
+    position: absolute;
+    left: 0;
+    width: 65%;
+}
+
+.parem {
+    position: absolute;
+    top: 2%;
+    right: 0;
+    width: 34%;
+}
+
+img {
+    max-width: 100%;
+    max-height: 100%;
 }
