--- a/static/booksearch/Search.css
+++ b/static/booksearch/Search.css
@@ -200,3 +200,22 @@ span.parool {
     margin:auto;
     display: block;
 }
+
+/* Raamatu info kuvamise jaotus paremal */
+.vasak {
+    position: absolute;
+    left: 0;
+    width: 65%;
+}
+
+.parem {
+    position: absolute;
+    top: 2%;
+    right: 0;
+    width: 34%;
+}
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
