--- a/templates/booksearch/MyLists.html
+++ b/templates/booksearch/MyLists.html
@@ -58,15 +58,24 @@
 </div>
 
 <div class="split right">
-    <div class="centered" id="parem">
-        <h2>Javascriptiga (või Djangoga?) rohkem infot raamatu kohta...</h2>
-        <p>Või äkki jätame selle osa üldse ära? Ehk lihtsalt üks leht (mitte kaheks jagatud)?</p>
+    <div id="vasak" class="vasak">
+
     </div>
-    <form class="invisForm" id="rmWantedForm" method="post"> {% csrf_token %}
-        {{ rmwantedform.as_p }}
-        <button type="submit" id="rmWantedButton" onclick="fillWanted();
-        document.getElementById('rmWantedForm').style.display='none';">Ma ei taha seda raamatut!</button>
-    </form>
+
+    <div id="parem" class="parem">
+        <div id="pilt">
+
+        </div>
+
+        <div id="nupud">
+            <form class="invisForm" id="rmWantedForm" method="post"> {% csrf_token %}
+                {{ rmwantedform.as_p }}
+                <button type="submit" id="rmWantedButton" onclick="fillWanted();
+                document.getElementById('rmWantedForm').style.display='none';">Ma ei taha seda raamatut!</button>
+            </form>
+        </div>
+
+    </div>
 </div>
 
 <div class="footer">
