Search & MyLists: Tegin pealkirja ja süžee kuvamise eraldi.

--- a/templates/booksearch/Search.html
+++ b/templates/booksearch/Search.html
@@ -68,6 +68,13 @@
 
 <div class="split right">
     <div id="vasak" class="vasak">
+        <div id="pealkiri">
+
+        </div>
+
+        <div id="tekst">
+
+        </div>
 
     </div>
 
