--- a/templates/booksearch/Search.html
+++ b/templates/booksearch/Search.html
@@ -80,7 +80,7 @@
 
     <div id="parem" class="parem">
         <div id="pilt">
-
+            <img src="{{ imageDir }}">
         </div>
 
         <div id="nupud">
