Raamatu pilt MyLists lehele.

--- a/templates/booksearch/MyLists.html
+++ b/templates/booksearch/MyLists.html
@@ -71,7 +71,7 @@
 
     <div id="parem" class="parem">
         <div id="pilt">
-
+            <img src="{{ imageDir }}">
         </div>
 
         <div id="nupud">
