andmebaasi asukoht peidetud, sisselogimistestid

--- a/templates/booksearch/Frontpage.html
+++ b/templates/booksearch/Frontpage.html
@@ -44,7 +44,7 @@
 <ul id="loggedOutNavbar">
     <li style="float:left"><a title="Pealehele" rel="canonical" href="https://vl2018-ryhm15.herokuapp.com/">BOOKWORM</a></li>
     <li><a title="Rohkem infot Bookwormi kohta" rel="author" href="https://vl2018-ryhm15.herokuapp.com/about">Meist</a></li>
-    <li title="Logi Bookrowrmi sisse" rel="nofollow" onclick="document.getElementById('login').style.display='none'; document.getElementById('signup').style.display='block'">Loo kasutaja</li>
+    <li title="Logi Bookrowrmi sisse" id="signupModalActivator" rel="nofollow" onclick="document.getElementById('login').style.display='none'; document.getElementById('signup').style.display='block'">Loo kasutaja</li>
     <li title="Registreeru Bookwormi kasutajaks" id="loginModalActivator" rel="nofollow" onclick="document.getElementById('signup').style.display='none'; document.getElementById('login').style.display='block'">Logi sisse</li>
 </ul>
 {% endif %}
