--- a/templates/booksearch/About.html
+++ b/templates/booksearch/About.html
@@ -33,8 +33,8 @@
 <ul id="loggedOutNavbar">
     <li style="float:left"><a title="Pealehele" href="https://vl2018-ryhm15.herokuapp.com/">BOOKWORM</a></li>
     <li><a title="Rohkem infot Bookwormi kohta" href="https://vl2018-ryhm15.herokuapp.com/about">Meist</a></li>
-    <li title="Logi Bookrowrmi sisse" rel="nofollow" onclick="document.getElementById('login').style.display='none'; document.getElementById('signup').style.display='block'">Loo kasutaja</li>
-    <li title="Registreeru Bookwormi kasutajaks" id="loginModalActivator" rel="nofollow" onclick="document.getElementById('signup').style.display='none'; document.getElementById('login').style.display='block'">Logi sisse</li>
+    <li title="Registreeru Bookwormi kasutajaks" rel="nofollow" onclick="document.getElementById('login').style.display='none'; document.getElementById('signup').style.display='block'">Loo kasutaja</li>
+    <li title="Logi Bookrowrmi sisse" id="loginModalActivator" rel="nofollow" onclick="document.getElementById('signup').style.display='none'; document.getElementById('login').style.display='block'">Logi sisse</li>
 </ul>
 {% endif %}
 
